# llvm-learn

./: README.md  compile_commands.json
aman-lang/: .clang-tidy  CMakeLists.txt  README.md
aman-lang/.cache/clangd/index/: AST.h.4C0BEE9B7DB1FD12.idx  ASTCtx.h.92C63FABA8B08193.idx  CGDebugInfo.cc.89D6E6E896A156B3.idx  CGDebugInfo.h.D5889F9429FCA8E7.idx  CGEh.cc.EE5A38FA1AF27824.idx  CGEh.h.A2EE3B0A71690368.idx  CGModule.cc.4F56919F47650F0B.idx  CGModule.h.AC92DBBD05EE8167.idx  CGProcedure.cc.C1E391700ACE0D27.idx  CGProcedure.h.44BFDD074D241939.idx  CGTbaa.cc.B0DC618C3BC90D8F.idx  CGTbaa.h.6EA6792C3B47AA01.idx  CodeGen.cc.4CF255B49B79AC48.idx  CodeGen.h.C576957035D81F02.idx  Diagnostic.cc.EEEA35D65EAAFF6B.idx  Diagnostic.def.D761D42F8FB8929E.idx  Diagnostic.h.7BC60446BD030025.idx  Driver.cc.1118BC1E94F52AB4.idx  Lexer.cc.F7664BE581FDAA06.idx  Lexer.h.759CD41D7E550C69.idx  Parser.cc.D6B7681CBD462F37.idx  Parser.h.EF19946826950167.idx  Scope.h.B7324D89EB7960C2.idx  Sema.cc.B31E321E9BD37B80.idx  Sema.h.85312C9BAE051331.idx  Token.h.1D4E38A475EAA83A.idx  TokenKinds.cc.1A7E64250DDDE1FD.idx  TokenKinds.def.45FA0B8D2AAFFB32.idx  TokenKinds.h.DF6853ABD7D7F884.idx
aman-lang/cmake/modules/: AddAmanLang.cmake
aman-lang/include/amanlang/AST/: AST.h  ASTCtx.h
aman-lang/include/amanlang/Basic/: Diagnostic.h  TokenKinds.def  TokenKinds.h
aman-lang/include/amanlang/CodeGen/: CGDebugInfo.h  CGEh.h  CGModule.h  CGProcedure.h  CGTbaa.h  CodeGen.h
aman-lang/include/amanlang/Lexer/: Lexer.h  Token.h
aman-lang/include/amanlang/Parser/: Parser.h
aman-lang/include/amanlang/Sema/: Scope.h  Sema.h
aman-lang/lib/: CmakeLists.txt
aman-lang/lib/Basic/: CMakeLists.txt  Diagnostic.cc  TokenKinds.cc
aman-lang/lib/CodeGen/: CGDebugInfo.cc  CGEh.cc  CGModule.cc  CGProcedure.cc  CGTbaa.cc  CMakeLists.txt  CodeGen.cc
aman-lang/lib/Lexer/: CMakeLists.txt  Lexer.cc
aman-lang/lib/Parser/: CMakeLists.txt  Parser.cc
aman-lang/lib/Sema/: CMakeLists.txt  Sema.cc
aman-lang/tools/: CmakeLists.txt
aman-lang/tools/driver/: CMakeLists.txt  Driver.cc
calc-lang-ljit/: .clang-format  AST.h  CmakeLists.txt  CodeGen.cc  CodeGen.h  Lexer.cc  Lexer.h  Parser.cc  Parser.h  README.md  Sema.cc  Sema.h  cleanup.sh  main.cc
calc-language/: AST.h  CmakeLists.txt  CodeGen.cc  CodeGen.h  Lexer.cc  Lexer.h  Parser.cc  Parser.h  README.md  Sema.cc  Sema.h  build.sh  main.cc
calc-language/.cache/clangd/index/: AST.h.50CA9E6FBAF32830.idx  CodeGen.cc.B3B24701DF0E39F6.idx  CodeGen.h.BB5C233462E661DB.idx  Lexer.cc.3F2927B56995B4D5.idx  Lexer.h.BF8C4D8B341FB71F.idx  Parser.cc.369DD13296A9FE4E.idx  Parser.h.E6D1B6B7917081C1.idx  Sema.cc.B02E2488EA9EC876.idx  Sema.h.C863D12DC589DCC0.idx  main.cc.19CB599D6B581C30.idx
custom-jit/: .clang-format  CMakeLists.txt  JIT.cc  JIT.h  README.md  main.cc  test.cc  test.ll
pprofiler/: README.md
pprofiler/llvm/include/llvm/Transforms/PProfiler/: PProfiler.h
pprofiler/llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
pprofiler/llvm/lib/Transforms/: CMakeLists.txt
pprofiler/llvm/lib/Transforms/PProfiler/: CMakeLists.txt  PProfiler.cc
tablegen/: CMakeLists.txt  GENERATED.inc  Main.cc  README.md  TableGenBackends.h  TableGenEmitter.cc  amanlang-tblgen  c_lang.td  inst.td  keyword.td
tablegen/.cache/clangd/index/: Main.cc.9E31AD481EB55E8E.idx  TableGenBackends.h.AD348EBC525F64F5.idx  TableGenEmitter.cc.BEB3A8F2F514D18F.idx
